manooth css added

--- a/manooth.html
+++ b/manooth.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
         integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
-        <script src="https://kit.fontawesome.com/65a39d250b.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/65a39d250b.js" crossorigin="anonymous"></script>
 
     <!-- My fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,10 +23,8 @@
 </head>
 
 <body>
+    <!-- Header -->
     <header>
-        <div class="logo">
-            <img src="img/devjane.png" alt="">
-        </div>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
         </button>
@@ -38,32 +36,41 @@
                 <li class="nav__item"><a href="index.html#work" class="nav__link">My Work</a></li>
             </ul>
         </nav>
+
+        <div class="proj-header">
+            <h1 class="section__title section__title--intro">
+                <strong>Manooth Furniture</strong>
+            </h1>
+            <h4>Mobile & Web Application</h4>
+            <p class="section__subtitle section__subtitle--intro">UX / UI</p>
+        </div>
     </header>
 
-    <section class="project-det">
-
-        <h3>Overview</h3>
+    <section>
+        <h2>Overview</h2>
         <p>Manooth Furniture is a brand new business, selling affordable, high-end furniture, made in Ireland. This was
             a project for my Adobe XD class, led by Adobe-certified instructor, Daniel Scott.
         </p>
 
-        <h3>Objective</h3>
+
+
+        <h2>Objective</h2>
         <p>To build an e-commerce website and app for people to browse and purchase furniture for home delivery. The
             website should include: 1. Homepage (With a Nav {Living Room, Bedroom, Kitchen, Dining Room}, Hero Slider,
             New in Store, Inspiration Ideas, Clearance and a Footer) 2. Category Page and 3. Product Page</p>
 
-        <h3>My Role </h3>
+        <h2>My Role </h2>
         <p>As a student, my role was to create this entire website from the ground up, as well as a full app. I created
             wireframes, prototypes, mockups and ran usability tests.
         </p>
 
-        <h3>Initial User Research</h3>
+        <h2>Initial User Research</h2>
         <p>Since this was a brand new website, no existing data was available. However, since it is from an existing
             field, I was able to locate data online that applied to our users. Based on that data, I created a user
             persona for Manooth Furniture. I continued to keep that user persona in mind for every decision that I made
             for Manooth Furniture.</p>
 
-        <h3>Design Approach</h3>
+        <h2>Design Approach</h2>
         <p>I wanted to start building the website first and the app second, so to keep the theme and user experience of
             the two quite similar. I approach all my designs with three main objectives, to make them useful, usable and
             valuable. First, I focused on strategy, to find out what the business wanted, what the stakeholders wanted
@@ -74,7 +81,7 @@
             principles of Interaction Design, such as; consistency, visibility, predictability, learnability and
             feedback at the forefront of my design process.</p>
 
-        <h3>Final Navigation Experience</h3>
+        <h2>Final Navigation Experience</h2>
         <p>I started with a sliding hero image to get the user’s attention. I kept the home page simple, using drop down
             menus to guide the user to their perceived destination.</p>
 
@@ -86,21 +93,21 @@
 
         <img src="img/manooth/manooth2.png" alt="">
 
-        <h3>Video Walkthrough</h3>
+        <h2>Video Walkthrough</h2>
         insert <video src="#"></video>
-
-        <button>Interact</button>
+        <div class="btn-container">
+            <button class="btn">Interact</button>
+        </div>
 
         <!-- App Version -->
-        <h3>The App version</h3>
+        <h2>The App version</h2>
         photo gallery
 
         <video src="#"></video>
-        video 
+        video
 
 
     </section>
-
 
 
 
