--- a/rhino-splits.html
+++ b/rhino-splits.html
@@ -53,10 +53,10 @@
   <!--Overview -->
   <section class="overview">
   
-    <div class="content-wrapper">
+    <div>
       <!--Left Container-->
       <!--My Role-->
-      <div id=role class="container p-3 my-3 border">
+      <div>
         <h2>My Role</h2>
         <p> My role was to do the user research and design of this mobile app.
         </p>
@@ -68,7 +68,7 @@
         </p>
       </div>
       <!--Right Container-->
-      <div class="right-container" id="overview-container">
+      <div>
 
         <h2>
           <h2>Overview</h2>
@@ -82,7 +82,7 @@
             Below I have detailed my design process and included a clickable prototype.
           </p>
         </h2>
-        <div class="button-section">
+        <div class="btn-section">
           <a href="https://www.figma.com/file/ZMuA8hybpuXbB9AWSoEygZ/Rhino-Splits-2?node-id=0%3A1"><button
               class="btn"> <b> View Prototype</b> </button></a>
         </div>
@@ -91,26 +91,24 @@
     </div>
   </section>
 
-  <br>
-
 
   <!--Design Process-->
   <section>
     <div id="design-process">
       <h2>Design Process</h2>
-      <br>
-      <p>1. Discover &nbsp
+
+      <p class="design-grid">1. Discover &nbsp
         2. Define &nbsp
         3. Design &nbsp
         4. Test &nbsp
         4. Deploy
       </p>
-      <br>
+ 
       <h2>
         Design Tools
       </h2>
 
-      <div id="design-tool">
+      <div class="stack-container">
         <div class="design-stack">
         <img src="images/figma-48.png" alt="">
         <figcaption>Figma</figcaption>
@@ -131,41 +129,34 @@
   </section>
 
   <section>
-    <div>
       <img src="images/mockup-of-four-floating-iphone-screens-against-a-customizable-background-2904-2.png"
         class="img-fluid" alt="Responsive image">
-    </div>
   </section>
 
 <!-- Discover Phase -->
-  <h2>Discover</h2>
-  <div class="line"></div>
+  <h3 class="process-header">Discover</h3>
 
   <section>
     <!--Prob Statment-->
-    <div id="problem">
       <h2>Problem Statement</h2>
       <p> How might we... provide a peer-to-peer payment method for young, social people that
         remains convenient, quick, private and has little, to no, learning curve. </p>
-    </div>
   </section>
 
   <section>
     <!--Research-->
     <h2>Research Plan</h2>
-    <div id="research-div">
-      <div class="container p-3 my-3 border" id="research-left">
+    <div class="research-div">
+   
         <h3>Activities and Interactions</h3>
-        <p>
         <ul>
           <li>Going to dinner with friends</li>
           <li>Paying rent to a roomate</li>
           <li> Going out for drinks</li>
           <li>Buying from a garage sale or Marketplace</li>
         </ul>
-        </p>
+        
         <h3>Environments</h3>
-        <p>
         <ul>
           <li>Restaurants</li>
           <li>Garage Sales</li>
@@ -173,61 +164,41 @@
           <li>Apartments</li>
           <li>House</li>
         </ul>
-        </p>
-      </div>
 
-      <div class="container p-3 my-3 border" id="research-right">
         <h3>Target Users</h3>
-        <p>
         <ul>
           <li>College Students</li>
           <li>Tech Savy</li>
           <li>Social</li>
-
         </ul>
-        </p>
+       
         <h3>Competitors</h3>
-        <p>
         <ul>
           <li>Venmo</li>
           <li>Google Pay</li>
           <li>Apple Pay</li>
           <li>Samsung Pay</li>
         </ul>
-        </p>
-      </div>
+  
     </div>
   </section>
-  <br>
+
 
   <!--Comp Anylsisis -->
   <section>
-    <div>
       <h2>Competitive Anylisis</h2>
-      <br>
       <p>
         Since there was already an existing field of "digital wallets" on the market, I was able to analyze existing
         information about Venmo, Google Pay, Cash App, Apple Pay and Samsung Pay. While studying their apps, I compared
         their strength and weakness and was able to define areas of opportunity, where our app could supersede theirs.
       </p>
-
-    </div>
-    </div>
-
-    <div>
-
       <img src="images/Rhino-spit- Competitors.jpg" alt="graphic designer on computer">
-
-    </div>
-
   </section>
-  <br>
 
   <!--Interview Users-->
   <section>
     <h2>User Interviews</h2>
-    <br>
-    <div id="user-meet">
+    <div class="interview-container">
       <p>Let's meet the users...</p>
     </div>
     <div id="interviewee-notes">
@@ -237,9 +208,6 @@
 
   <!--Interviews-->
   <section id="section" class="interview">
-    <div>
-      <h2>User Interviews</h2>
-
       <p>
         The user interviews may be my favorite part of the research process! I started my interviews with a friendly
         greeting, to make sure the interviewee is at ease and a disclaimer to let them know they are being recorded.
@@ -251,28 +219,21 @@
         having a casual conversation.
       </p>
 
-    </div>
-
     <!--Interview Gif-->
-    <div>
       <img class="design-gif" src="images/Interview.gif" alt="graphic designer on computer">
-    </div>
   </section>
 
 
   <!--Research Synth and Insights-->
 
   <section>
-
-
     <div id="affinity">
       <h2>Research Synthesis</h2>
 
       <img src="images/Affinity Map Rhino Splits.png"  alt="Laptop with a website loaded">
     </div>
 
-    <br>
-    <br>
+   
 
     <div class="content-wrapper-one">
       <!--Insights Div Left-->
@@ -291,14 +252,12 @@
         <img src="images/Insights .png" alt="Laptop with a website loaded">
 
       </div>
-
-
   </section>
-  <br>
+
 
   <section>
     <!--Persona-->
-
+    <h3 class="process-header">Define</h3>
     <h2>Defining Our User</h2>
     <Div id="persona">
       <img src="images/persona.png" class="img-fluid" alt="...">
@@ -314,15 +273,12 @@
   <section>
     <!--Journey Map-->
     <h2>Journey Mapping </h2>
-    <div id="journey-map">
-      <img src="images/Journey Map.pdf" class="img-fluid" alt="">
-      <div id="user-persona-comment">
+    <div>
+      <img src="images/Journey Map.pdf" alt="">
         <p>
           The journey map above is based on scenarios and stories that the user's shared in their interviews.
-        </p>
-      </div>
+        </p>    
     </div>
-
   </section>
 
   <section>
@@ -341,14 +297,12 @@
           the game, the success would not be coming from some of the eary adopters that jumped on the Venmo bandwagon,
           but the late adopters that are fed up with their limeted digital wallet options.
         </p>
-
       </div>
 
     </div>
   </section>
 
   <!--Define Phasae-->
-  <h2>Define</h2>
   <div class="line"></div>
   <section id="site-map">
 
@@ -365,7 +319,7 @@
 
   <!--Sketches-->
   <Section>
-    <h2>Design</h2>
+    <h3 class="process-header">Design</h3>
     <div class="line"></div>
     <h3>App Sketches</h3>
     <div id="sketch">
@@ -389,8 +343,8 @@
 
 
 
+  <!--Wireframing-->
   <section>
-    <!--Wireframing-->
     <h2>Wireframes</h2>
     <div id="wireframe">
       <img src="images/wireframes.jpg" class="img-fluid" alt="">
@@ -402,31 +356,24 @@
     <img src="images/Style-Guide1.jpg">
   </section>
 
+  <!--Mock Ups and Hi-Fi Prototyple-->
   <section>
-    <!--Mock Ups and Hi-Fi Prototyple-->
-    <div>
       <h2>Mock Ups & Hi-Fidelity Prototype</h2>
       <p>
         After doing in-depth interviews with the users, I found that the best way to do that would be to get rid of all
         the "extras" that they were dealing with with other similar apps.
         I also made the change of moving the navigation from the top, where I had it in the wireframe, to the bottom,
         where it is more easily accessible to the user's thumb.
-
       </p>
       <div id="mockups">
         <img src="images/Rhino-Split-recording.mov" alt="">
-
       </div>
-
   </section>
-  </div>
 
+
+  <!-- Lessons Learned-->
   <section>
-    <!-- Lessons Learned-->
-    <div id="lessons-learned">
-
       <h2>Lessons Learned</h2>
-
       <p>
         I ran two batches of user's tests. The first test was with hi-fi prototype. One key lesson I learned was to give
         the user's a scenerio-based task to complete and to explain that task before they have the phone in their hands.
@@ -443,15 +390,12 @@
         comparing the navigation at the bottom to the navigation at the top, where it previously was, but due to
         constraints that wasn't able to happen this time.
       </p>
-
-    </div>
   </section>
   
 
 
      <!-- Footer -->
      <footer class="footer">
-      <!-- replace with your own email address -->
       <a href="mailto:tiffani.j.burk@gmail.com" class="footer__link">tiffani.j.burk@gmail.com</a>
       <ul class="social-list">
           <li class="social-list__item">
