--- a/cake-my-day.html
+++ b/cake-my-day.html
@@ -23,10 +23,8 @@
 </head>
 
 <body>
-    <header>
-        <div class="logo">
-            <img src="img/devjane.png" alt="">
-        </div>
+     <!-- Header -->
+     <header>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
         </button>
@@ -38,21 +36,30 @@
                 <li class="nav__item"><a href="index.html#work" class="nav__link">My Work</a></li>
             </ul>
         </nav>
+
+        <div class="proj-header">
+            <h1 class="section__title section__title--intro">
+                <strong>Cake My Day</strong>
+            </h1>
+            <h4>Mobile Application</h4>
+            <p class="section__subtitle section__subtitle--intro">UI Design</p>
+        </div>
     </header>
 
     <div class="intro-container">
         <img src="img/cake/cake-mock.png" alt="">
 
-        <div class="overview">
-            <h3>Overview</h3>
+
+        <section class="overview">
+            <h2>Overview</h2>
             <p>The owner of a local bakery wanted me to create an app for her store. The goal was to make it more
                 convenient and
                 easier for her customers to create orders.</p>
 
-            <h3>My Role</h3>
+            <h2>My Role</h2>
             <p>Being that I was the only designer on this project, I handled all the research and UI design.</p>
 
-            <h3>Initial User Research</h3>
+            <h2>Initial User Research</h2>
             <p>For the initial research, I got to know my client’s business. It’s a bakery that specializes in cake
                 pops. It’s owned by an independent business woman and single mom. Her target audience is mostly female.
                 Although her main competition is the few other bakeries located in her town, none of them specialize in
@@ -63,18 +70,19 @@
                 gardening and crafting. She has a 2 year old son that is her whole world. Jackie loves cake pops and is
                 looking to have something fun, unique and different to serve at her son’s 2 year birthday party.</p>
 
-        </div>
+        </section>
     </div>
 
-    <div class="main-container">
-        <h3>Design Tools</h3>
-        <img style="width: 50%" src="img/cake/design-tools-cmd.png" alt="">
+    <section class="main-container">
+        <h2>Design Tools</h2>
+        <img src="img/cake/design-tools-cmd.png" alt="">
 
+        <br>
 
         <img src="img/cake/user-persona-cmd.png" alt="">
 
 
-        <h3>Design Approach</h3>
+        <h2>Design Approach</h2>
         <p>With the user and the business in mind, I started by creating a user flow map for our persona, Jackie.
             After
             figuring out how Jackie was going to move through the app, I created a wireframe to give the client an
@@ -89,19 +97,19 @@
 
         <img style="width: 70%" src="img/cake/cake-my-day-flow.webp" alt="">
 
-        <h3>User Testing</h3>
+        <h2>User Testing</h2>
         <p>I ran both moderated and unmoderated user tests for this app. Upon initial testing, some of the users were
             having a difficult time figuring out how to use the category slider. However, I was able to quickly make
             adjustments and fixed that issue. After that, all of the users had no problems navigating through the tasks
             I gave them. All of the users were able confidently make a purchase on the app.</p>
 
-        <h3>Final Navigation</h3>
+        <h2>Final Navigation</h2>
         input video
 
-        <h3>Mockups</h3>
+        <h2>Mockups</h2>
         Input images
 
-    </div>
+    </section>
 
 
 
