--- a/honey-rae.html
+++ b/honey-rae.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
         integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
-        <script src="https://kit.fontawesome.com/65a39d250b.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/65a39d250b.js" crossorigin="anonymous"></script>
 
     <!-- My fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,10 +22,8 @@
 </head>
 
 <body>
-    <header>
-        <div class="logo">
-            <img src="img/devjane.png" alt="">
-        </div>
+     <!-- Header -->
+     <header>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
         </button>
@@ -37,11 +35,20 @@
                 <li class="nav__item"><a href="index.html#work" class="nav__link">My Work</a></li>
             </ul>
         </nav>
+
+        <div class="proj-header">
+            <h1 class="section__title section__title--intro">
+                <strong>Honey Rae Repairs</strong>
+            </h1>
+            <h4>Web Application</h4>
+            <p class="section__subtitle section__subtitle--intro">Front-End Development</p>
+            <!-- <img src="#" alt="" class="intro__img"> -->
+        </div>
     </header>
 
-    <h3>Overview</h3>
-    <div class="vid-container">
-    <div class="overview-container">
+    <!-- Overview -->
+    <section>
+        <h2>Overview</h2>
         <p>This application was built using React for multiple users. The user can log in as a customer or an employee.
             The
             employee-user has the ability to search service tickets by name, view emergency only tickets or all tickets
@@ -53,21 +60,26 @@
             customer-user can also view open tickets (service requests that have not been worked on) and view just their
             service request tickets. Dynamic coding. ERD is attached below.
         </p>
-    </div>
-    <h3>Video Walkthough</h3>
-        <video width="75%" height="auto" controls>
+    </section>
+
+    <!-- Video -->
+    <section>
+        <h2>Video Walkthough</h2>
+        <video width="100%" height="auto" controls>
             <source src="img/honey-rae/Honey Rae Repairs (1).mp4">
         </video>
-        <br>
+    </section>
 
-        <h3>ERD</h3>
+    <!-- ERD -->
+    <section>
+        <h2>ERD</h2>
         <img src="img/honey-rae/ERD.png" />
+    </section>
 
-    </div>
 
 
-     <!-- Footer -->
-     <footer class="footer">
+    <!-- Footer -->
+    <footer class="footer">
         <!-- replace with your own email address -->
         <a href="mailto:tiffani.j.burk@gmail.com" class="footer__link">tiffani.j.burk@gmail.com</a>
         <ul class="social-list">
@@ -81,7 +93,7 @@
                     <i class="fab fa-dribbble"></i>
                 </a>
             </li>
-           
+
             <li class="social-list__item">
                 <a class="social-list__link" href="https://github.com/tiffani-burk">
                     <i class="fab fa-github"></i>
