--- a/visual-ui.html
+++ b/visual-ui.html
@@ -23,10 +23,8 @@
 </head>
 
 <body>
-    <header>
-        <div class="logo">
-            <img src="img/devjane.png" alt="">
-        </div>
+     <!-- Header -->
+     <header>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
         </button>
@@ -38,6 +36,14 @@
                 <li class="nav__item"><a href="index.html#work" class="nav__link">My Work</a></li>
             </ul>
         </nav>
+
+        <div class="proj-header">
+            <h1 class="section__title section__title--intro">
+                <strong>UI</strong>
+            </h1>
+            <h4>UI & Visual Elements</h4>
+            <p class="section__subtitle section__subtitle--intro">Design</p>
+        </div>
     </header>
 
     <section .main-container>
