--- a/lyrically.html
+++ b/lyrically.html
@@ -257,6 +257,18 @@
         <video class="vid2" width="100%" height="auto" controls src="img/lyrically/Lyrically-walkthrough2.mp4"></video>
 
         <p>Photos of Developed Application</p>
+
+        <div class="img-mockup">
+            <img class="lyrically-img" src="img/Lyrically/mockup/1.png" alt="">
+            <img class="lyrically-img" src="img/Lyrically/mockup/2.png" alt="">
+            <img class="lyrically-img" src="img/Lyrically/mockup/3.png" alt="">
+            <img class="lyrically-img" src="img/Lyrically/mockup/4.png" alt="">
+            <img class="lyrically-img" src="img/Lyrically/mockup/5.png" alt="">
+            <img class="lyrically-img" src="img/Lyrically/mockup/6.png" alt="">
+            <img class="lyrically-img" src="img/Lyrically/mockup/7.png" alt="">
+            <img class="lyrically-img" src="img/Lyrically/mockup/8.png" alt="">
+        </div>
+
     </section>
 
 
