--- a/manooth.html
+++ b/manooth.html
@@ -58,7 +58,10 @@
         <p>To build an e-commerce website and app for people to browse and purchase furniture for home delivery. The
             website should include: 1. Homepage (With a Nav {Living Room, Bedroom, Kitchen, Dining Room}, Hero Slider,
             New in Store, Inspiration Ideas, Clearance and a Footer) 2. Category Page and 3. Product Page</p>
+    </section>
 
+
+    <section class="role-section">
         <h2>My Role </h2>
         <p>As a student, my role was to create this entire website from the ground up, as well as a full app. I created
             wireframes, prototypes, mockups and ran usability tests.
@@ -69,7 +72,9 @@
             field, I was able to locate data online that applied to our users. Based on that data, I created a user
             persona for Manooth Furniture. I continued to keep that user persona in mind for every decision that I made
             for Manooth Furniture.</p>
+    </section>
 
+    <section>
         <h2>Design Approach</h2>
         <p>I wanted to start building the website first and the app second, so to keep the theme and user experience of
             the two quite similar. I approach all my designs with three main objectives, to make them useful, usable and
@@ -84,30 +89,39 @@
         <h2>Final Navigation Experience</h2>
         <p>I started with a sliding hero image to get the user’s attention. I kept the home page simple, using drop down
             menus to guide the user to their perceived destination.</p>
-
         <img src="img/manooth/manooth1.png" alt="">
+    </section>
 
+    <section>
         <p>On the product page, I added an interactive design, by making the star ratings pushable and the add to cart
             button and favorite button interactive.
         </p>
 
         <img src="img/manooth/manooth2.png" alt="">
+    </section>
+
+    <section class="final-section">
+
 
         <h2>Video Walkthrough</h2>
-        insert <video src="#"></video>
+        add video
         <div class="btn-container">
             <button class="btn">Interact</button>
         </div>
 
         <!-- App Version -->
         <h2>The App version</h2>
-        photo gallery
-
-        <video src="#"></video>
-        video
-
-
+        <div class="app-container">
+            <img class="app-img" src="img/manooth/appView/app1.png" alt="">
+            <img class="app-img" src="img/manooth/appView/app2.png" alt="">
+            <img class="app-img" src="img/manooth/appView/app4.png" alt="">
+            <img class="app-img" src="img/manooth/appView/app5.png" alt="">
+        </div>
+        <br>
+        video walkthrough
+        add video
     </section>
+
 
 
 
