--- a/visual-ui.html
+++ b/visual-ui.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
         integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
-        <script src="https://kit.fontawesome.com/65a39d250b.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/65a39d250b.js" crossorigin="anonymous"></script>
 
     <!-- My fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,8 +23,8 @@
 </head>
 
 <body>
-     <!-- Header -->
-     <header>
+    <!-- Header -->
+    <header>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
         </button>
@@ -42,31 +42,31 @@
                 <strong>UI</strong>
             </h1>
             <h4>UI & Visual Elements</h4>
-            <p class="section__subtitle section__subtitle--intro">Design</p>
+            <p class="section__subtitle section__subtitle--intro">Visual Design</p>
         </div>
     </header>
 
-    <section .main-container>
+    <section class="main-container">
         <p>This is a collection of UI and visual designs</p>
         <div class="photo-grid">
-            <img src="img/ui-visual/Screen Shot 2022-10-19 at 7.45.02 PM 2.png" alt="">
-            <img src="img/ui-visual/Screen Shot 2022-10-19 at 7.53.09 PM 2.png" alt="">
-            <img src="img/ui-visual/Screen Shot 2022-10-19 at 7.53.33 PM 2.png" alt="">
-            <img src="img/ui-visual/Screen Shot 2022-10-19 at 7.53.54 PM 2.png" alt="">
-            <img src="img/ui-visual/bootique.png" alt="">
+            <img style="margin-bottom: 1rem" class="ui-img" src="img/UI Challenges/5.png" alt="">
+            <img style="margin-bottom: 1rem" class="ui-img" src="img/UI Challenges/1.png" alt="">
+            <img style="margin-bottom: 1rem" class="ui-img" src="img/UI Challenges/2.png" alt="">
+            <img style="margin-bottom: 1rem" class="ui-img" src="img/UI Challenges/3.png" alt="">
+            <img style="margin-bottom: 1rem" class="ui-img" src="img/UI Challenges/4.png" alt="">
+            <img style="margin-bottom: 1rem" class="ui-img" src="img/UI Challenges/6.png" alt="">
         </div>
-
+        <br>
         <img src="img/ui-visual/zen.png" alt="">
+        <br>
 
         <img src="img/ui-visual/business.png" alt="">
+        <br>
 
         <h3>Logos</h3>
-        <img src="img/ui-visual/cake-my-day-logo.webp" alt="">
+        <img class="logo-img" src="img/ui-visual/cake-my-day-logo.webp" alt="">
 
-        <img src="img/ui-visual/stefalashed-logo.webp" alt="">
-
-
-
+        <img class="logo-img" src="img/ui-visual/stefalashed-logo.webp" alt="">
     </section>
 
 
