--- a/manooth.html
+++ b/manooth.html
@@ -119,7 +119,7 @@
         </div>
         <br>
         video walkthrough
-        add video
+        <video class="manoothVid" controls src="img/manooth/appView/AppVid.mp4"></video>
     </section>
 
 
