video updates made

--- a/manooth.html
+++ b/manooth.html
@@ -42,7 +42,7 @@
                 <strong>Manooth Furniture</strong>
             </h1>
             <h4>Mobile & Web Application</h4>
-            <p class="section__subtitle section__subtitle--intro">UX / UI</p>
+            <p class="section__subtitle section__subtitle--intro">UX / UI Design</p>
         </div>
     </header>
 
@@ -104,7 +104,7 @@
 
 
         <h2>Video Walkthrough</h2>
-        add video
+        <video controls class="manoothVidWeb" src="img/manooth/ManoothVidWeb.mp4"></video>
         <div class="btn-container">
             <button class="btn">Interact</button>
         </div>
