media queries added

--- a/honey-rae.html
+++ b/honey-rae.html
@@ -63,15 +63,15 @@
     </section>
 
     <!-- Video -->
-    <section>
+    <section class="honeyVid">
         <h2>Video Walkthough</h2>
-        <video width="100%" height="auto" controls>
+        <video controls>
             <source src="img/honey-rae/Honey Rae Repairs (1).mp4">
         </video>
     </section>
 
     <!-- ERD -->
-    <section>
+    <section class="ERD">
         <h2>ERD</h2>
         <img src="img/honey-rae/ERD.png" />
     </section>
