--- a/lyrically.html
+++ b/lyrically.html
@@ -81,7 +81,7 @@
             <img class="mockup1-img" src="img/Lyrically/ipad-mock.png" />
             <div class="role-container">
                 <h2>My Role</h2>
-                <p>I am the creator, designer and developer of this app.
+                <p class="role-p">I am the creator, designer and developer of this app.
                 </p>
                 <h2>Solution</h2>
                 <p>To create an app that bridges the gab between digital setlists aimed at songwriters and those
@@ -166,6 +166,7 @@
         <h2>Competitive Analysis</h2>
 
         <img src="img/Lyrically/Ultimate-Guitar.jpeg" />
+        <br>
         <img src="img/Lyrically/Onsong.jpeg" />
 
 
