--- a/rhino-splits.html
+++ b/rhino-splits.html
@@ -120,7 +120,7 @@
   </section>
 
   <!-- Discover Phase -->
-  <h3 class="process-header">Discover</h3>
+  <h3 class="process-header">&#60 Discover Phase &#62</h3>
 
   <section>
     <!--Prob Statment-->
@@ -253,7 +253,7 @@
 
   <section>
     <!--Persona-->
-    <h3 class="process-header">Define</h3>
+    <h3 class="process-header">&#60 Define Phase &#62</h3>
     <h2>Defining Our User</h2>
     <Div id="persona">
       <img src="images/persona.png" class="img-fluid" alt="...">
@@ -315,10 +315,10 @@
   </section>
 
   <!-- Design Phase -->
-  <h3 class="process-header">Design</h3>
-
+  
   <!--Sketches-->
   <section class="sketches-section">
+    <h3 class="process-header">&#60 Design Phase &#62</h3>
     <h2>Sketches</h2>
     <div class="sketches">
       <img src="images/Sketches-1.jpg" class="sketch-img" alt="">
