--- a/manooth.html
+++ b/manooth.html
@@ -89,7 +89,7 @@
         <h2>Final Navigation Experience</h2>
         <p>I started with a sliding hero image to get the user’s attention. I kept the home page simple, using drop down
             menus to guide the user to their perceived destination.</p>
-        <img src="img/manooth/manooth1.png" alt="">
+        <img class="media-img" src="img/manooth/manooth1.png" alt="">
     </section>
 
     <section>
@@ -97,7 +97,7 @@
             button and favorite button interactive.
         </p>
 
-        <img src="img/manooth/manooth2.png" alt="">
+        <img class="media-img" src="img/manooth/manooth2.png" alt="">
     </section>
 
     <section class="final-section">
