--- a/lyrically.html
+++ b/lyrically.html
@@ -270,6 +270,7 @@
             <img class="lyrically-img" src="img/Lyrically/mockup/8.png" alt="">
         </div>
 
+
     </section>
 
 
@@ -295,6 +296,11 @@
                 </a>
             </li>
         </ul>
+        <div class="copyright">
+            <p><small>
+            &#169 Tiffani Burk 2022. All rights reserved. 
+            </small></p>
+        </div>
     </footer>
 
 
