--- a/cake-my-day.html
+++ b/cake-my-day.html
@@ -149,6 +149,11 @@
                 </a>
             </li>
         </ul>
+        <div class="copyright">
+            <p><small>
+            &#169 Tiffani Burk 2022. All rights reserved. 
+            </small></p>
+        </div>
     </footer>
 
 
