--- a/honey-rae.html
+++ b/honey-rae.html
@@ -100,6 +100,11 @@
                 </a>
             </li>
         </ul>
+        <div class="copyright">
+            <p><small>
+            &#169 Tiffani Burk 2022. All rights reserved. 
+            </small></p>
+        </div>
     </footer>
 
 
