--- a/index.html
+++ b/index.html
@@ -207,6 +207,12 @@
                 </a>
             </li>
         </ul>
+  
+        <div class="copyright">
+            <p><small>
+            &#169 Tiffani Burk 2022. All rights reserved. 
+            </small></p>
+        </div>
     </footer>
 
 
