--- a/lyrically.html
+++ b/lyrically.html
@@ -18,9 +18,13 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
+
+    <!-- link bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
     <!-- Link Style Sheet -->
     <link rel="stylesheet" href="css/lyrically.css">
-
 </head>
 
 <body>
@@ -245,21 +249,20 @@
                 product. Please feel
                 free
                 to explore the code in the link below.</p>
-            <img class="deploy-img" src="img/Lyrically/mockups.png" />
+            <img class="deploy-img" src="img/Lyrically/lyrically-mock.png" />
         </div>
     </section>
 
     <section class="deploy-section2">
-        <p>Video walkthrough of Lyrically</p>
+        <h4>Video walkthrough of Lyrically</h4>
         <video class="vid1" width="100%" height="auto" controls>
             <source src="img/Lyrically/Lyrically-waltkhough1.mp4">
         </video>
         <br>
         <video class="vid2" width="100%" height="auto" controls src="img/lyrically/Lyrically-walkthrough2.mp4"></video>
-
-        <p>Photos of Developed Application</p>
-
-        <div class="img-mockup">
+        <br>
+        
+        <!-- <div class="img-mockup">
             <img class="lyrically-img" src="img/Lyrically/mockup/1.png" alt="">
             <img class="lyrically-img" src="img/Lyrically/mockup/2.png" alt="">
             <img class="lyrically-img" src="img/Lyrically/mockup/3.png" alt="">
@@ -268,6 +271,50 @@
             <img class="lyrically-img" src="img/Lyrically/mockup/6.png" alt="">
             <img class="lyrically-img" src="img/Lyrically/mockup/7.png" alt="">
             <img class="lyrically-img" src="img/Lyrically/mockup/8.png" alt="">
+        </div> -->
+
+        <h4>Photos of Developed Application</h4>
+        <!-- bootstrapped carousel -->
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="img/Lyrically/mockup/1.png" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="img/Lyrically/mockup/2.png" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="img/Lyrically/mockup/3.png" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="img/Lyrically/mockup/4.png" alt="Forth slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="img/Lyrically/mockup/5.png" alt="Fifth slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="img/Lyrically/mockup/6.png" alt="Sixth slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="img/Lyrically/mockup/7.png" alt="Seventh slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="img/Lyrically/mockup/8.png" alt="Eighth slide">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
 
 
@@ -298,13 +345,24 @@
         </ul>
         <div class="copyright">
             <p><small>
-            &#169 Tiffani Burk 2022. All rights reserved. 
-            </small></p>
+                    &#169 Tiffani Burk 2022. All rights reserved.
+                </small></p>
         </div>
     </footer>
 
-
+    <!-- JS script -->
     <script src="js/index.js"></script>
+
+    <!-- bootstrap js link -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 
 </body>
 
