--- a/rhino-splits.html
+++ b/rhino-splits.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tiffani Burk</title>
+  <!-- Link Bootstrap Carousel -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
     integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
@@ -17,8 +21,9 @@
     href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
     rel="stylesheet">
 
+<!-- Style sheet -->
+<link href="css/rhino-splits.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="css/rhino-splits.css">
 
 </head>
 
@@ -110,7 +115,7 @@
       <h2>
         Design Tools
       </h2>
-<img src="img/rhino-splits/tools.png" alt="">
+      <img src="img/rhino-splits/tools.png" alt="">
     </div>
   </section>
 
@@ -136,23 +141,23 @@
 
       <div class="research-item">
         <h3>Activities and Interactions</h3>
-          <ul>
-            <li>Going to dinner with friends</li>
-            <li>Paying rent to a roomate</li>
-            <li> Going out for drinks</li>
-            <li>Buying from a garage sale or Marketplace</li>
-          </ul>
+        <ul>
+          <li>Going to dinner with friends</li>
+          <li>Paying rent to a roomate</li>
+          <li> Going out for drinks</li>
+          <li>Buying from a garage sale or Marketplace</li>
+        </ul>
       </div>
 
       <div class="research-item">
         <h3>Environments</h3>
-          <ul>
-            <li>Restaurants</li>
-            <li>Garage Sales</li>
-            <li>Bars</li>
-            <li>Apartments</li>
-            <li>House</li>
-          </ul>
+        <ul>
+          <li>Restaurants</li>
+          <li>Garage Sales</li>
+          <li>Bars</li>
+          <li>Apartments</li>
+          <li>House</li>
+        </ul>
       </div>
 
       <div class="research-item">
@@ -230,10 +235,10 @@
 
 
 
-    <section class="insights-section">
-      <!--Insights Div Left-->
-      <h2>Insights</h2>
-      <div class="insight-wrapper">
+  <section class="insights-section">
+    <!--Insights Div Left-->
+    <h2>Insights</h2>
+    <div class="insight-wrapper">
       <div class="div-left">
         <p>
           While there were quite a few emerging themes amongst the interviewees, there were three key insights I
@@ -248,7 +253,7 @@
         <img src="images/Insights .png" alt="Laptop with a website loaded">
       </div>
     </div>
-      </section>
+  </section>
 
 
   <section>
@@ -315,7 +320,7 @@
   </section>
 
   <!-- Design Phase -->
-  
+
   <!--Sketches-->
   <section class="sketches-section">
     <h3 class="process-header">&#60 Design Phase &#62</h3>
@@ -364,30 +369,112 @@
       where it is more easily accessible to the user's thumb.
     </p>
     <div class="rhinoVid">
+      <h5>Video Walkthrough</h5>
       <video class="videoForRhino" controls src="images/Rhino-Split-recording.mov"></video>
-      <figcaption>Video Walkthrough</figcaption>
     </div>
 
     <br>
 
-<div class="img-mockups">
-    <img class="rhino-img" src="img/rhino-splits/rsmockup/1.png" alt="">
-    <img class="rhino-img" src="img/rhino-splits/rsmockup/2.png" alt="">
-    <img class="rhino-img" src="img/rhino-splits/rsmockup/3.png" alt="">
-    <img class="rhino-img" src="img/rhino-splits/rsmockup/4.png" alt="">
-    <img class="rhino-img" src="img/rhino-splits/rsmockup/5.png" alt="">
-    <img class="rhino-img" src="img/rhino-splits/rsmockup/6.png" alt="">
-    <img class="rhino-img" src="img/rhino-splits/rsmockup/7.png" alt="">
-    <img class="rhino-img" src="img/rhino-splits/rsmockup/8.png" alt="">
-    <img class="rhino-img" src="img/rhino-splits/rsmockup/9.png" alt="">
-    <img class="rhino-img" src="img/rhino-splits/rsmockup/10.png" alt="">
-    <img class="rhino-img" src="img/rhino-splits/rsmockup/11.png" alt="">
-    <img class="rhino-img" src="img/rhino-splits/rsmockup/12.png" alt="">
-    <img class="rhino-img" src="img/rhino-splits/rsmockup/13.png" alt="">
-    <img class="rhino-img" src="img/rhino-splits/rsmockup/14.png" alt="">
-    <img class="rhino-img" src="img/rhino-splits/rsmockup/15.png" alt="">
-    <img class="rhino-img" src="img/rhino-splits/rsmockup/16.png" alt="">
-  </div>
+    <!-- <div class="img-mockups">
+      <img class="rhino-img" src="img/rhino-splits/rsmockup/1.png" alt="">
+      <img class="rhino-img" src="img/rhino-splits/rsmockup/2.png" alt="">
+      <img class="rhino-img" src="img/rhino-splits/rsmockup/3.png" alt="">
+      <img class="rhino-img" src="img/rhino-splits/rsmockup/4.png" alt="">
+      <img class="rhino-img" src="img/rhino-splits/rsmockup/5.png" alt="">
+      <img class="rhino-img" src="img/rhino-splits/rsmockup/6.png" alt="">
+      <img class="rhino-img" src="img/rhino-splits/rsmockup/7.png" alt="">
+      <img class="rhino-img" src="img/rhino-splits/rsmockup/8.png" alt="">
+      <img class="rhino-img" src="img/rhino-splits/rsmockup/9.png" alt="">
+      <img class="rhino-img" src="img/rhino-splits/rsmockup/10.png" alt="">
+      <img class="rhino-img" src="img/rhino-splits/rsmockup/11.png" alt="">
+      <img class="rhino-img" src="img/rhino-splits/rsmockup/12.png" alt="">
+      <img class="rhino-img" src="img/rhino-splits/rsmockup/13.png" alt="">
+      <img class="rhino-img" src="img/rhino-splits/rsmockup/14.png" alt="">
+      <img class="rhino-img" src="img/rhino-splits/rsmockup/15.png" alt="">
+      <img class="rhino-img" src="img/rhino-splits/rsmockup/16.png" alt="">
+    </div> -->
+
+    <h5>Image Gallery</h5>
+    <!-- Image Carousel -->
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="10"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="11"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="12"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="13"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="14"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="15"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="16"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="img/rhino-splits/rsmockup/1.png" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/rhino-splits/rsmockup/2.png" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/rhino-splits/rsmockup/3.png" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/rhino-splits/rsmockup/4.png" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/rhino-splits/rsmockup/5.png" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/rhino-splits/rsmockup/6.png" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/rhino-splits/rsmockup/7.png" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/rhino-splits/rsmockup/8.png" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/rhino-splits/rsmockup/9.png" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/rhino-splits/rsmockup/10.png" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/rhino-splits/rsmockup/11.png" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/rhino-splits/rsmockup/12.png" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/rhino-splits/rsmockup/13.png" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/rhino-splits/rsmockup/14.png" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/rhino-splits/rsmockup/15.png" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/rhino-splits/rsmockup/16.png" alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
 
   </section>
 
@@ -438,13 +525,26 @@
     </ul>
     <div class="copyright">
       <p><small>
-      &#169 Tiffani Burk 2022. All rights reserved. 
-      </small></p>
-  </div>
+          &#169 Tiffani Burk 2022. All rights reserved.
+        </small></p>
+    </div>
   </footer>
 
 
+  <!-- JS Link for Bootstrap -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+
+  <!-- JS link -->
   <script src="js/index.js"></script>
+
 
 </body>
 
