--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <!-- Introduction -->
     <section class="intro" id="home">
         <h1 class="section__title section__title--intro">
-            Hi 👋 I am <strong>Tiffani Burk</strong>
-        </h1>
+            Hi <p class="hand-wave">👋</p> I am <strong>Tiffani Burk</strong></h1>
+       
         <p class="section__subtitle section__subtitle--intro">UX DESIGNER</p>
         <img src="img/profile.webp" alt="a picture of Tiffani smiling" class="intro__img">
     </section>
