--- a/rhino-splits.html
+++ b/rhino-splits.html
@@ -101,13 +101,7 @@
   <!--Design Process-->
   <section class="design-section">
     <h2>Design Process</h2>
-    <div class="design-process-grid">
-      <p class="design-grid"> 1. Discover </p>
-      <p class="design-grid"> 2. Define </p>
-      <p class="design-grid"> 3. Design </p>
-      <p class="design-grid"> 4. Test </p>
-      <p class="design-grid"> 6. Deploy </p>
-    </div>
+    <img src="img/design-process.png" alt="">
   </section>
 
   <section class="tool-section">
