--- a/lyrically.html
+++ b/lyrically.html
@@ -21,7 +21,12 @@
 
     <!-- link bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
+    integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
+  <script src="https://kit.fontawesome.com/65a39d250b.js" crossorigin="anonymous"></script>
 
     <!-- Link Style Sheet -->
     <link rel="stylesheet" href="css/lyrically.css">
@@ -103,7 +108,7 @@
         <br>
 
 
-        <img class="design-proc" src="img/Lyrically/Design Process.png" />
+        <img class="design-proc" src="img/design-process.png" />
         <figcaption>Design Process</figcaption>
     </section>
 
@@ -261,25 +266,20 @@
         <br>
         <video class="vid2" width="100%" height="auto" controls src="img/lyrically/Lyrically-walkthrough2.mp4"></video>
         <br>
-        
-        <!-- <div class="img-mockup">
-            <img class="lyrically-img" src="img/Lyrically/mockup/1.png" alt="">
-            <img class="lyrically-img" src="img/Lyrically/mockup/2.png" alt="">
-            <img class="lyrically-img" src="img/Lyrically/mockup/3.png" alt="">
-            <img class="lyrically-img" src="img/Lyrically/mockup/4.png" alt="">
-            <img class="lyrically-img" src="img/Lyrically/mockup/5.png" alt="">
-            <img class="lyrically-img" src="img/Lyrically/mockup/6.png" alt="">
-            <img class="lyrically-img" src="img/Lyrically/mockup/7.png" alt="">
-            <img class="lyrically-img" src="img/Lyrically/mockup/8.png" alt="">
-        </div> -->
+
 
         <h4>Photos of Developed Application</h4>
-        <!-- bootstrapped carousel -->
+        <!-- image carousel -->
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -353,16 +353,17 @@
     <!-- JS script -->
     <script src="js/index.js"></script>
 
-    <!-- bootstrap js link -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+
+  <!-- JS Link for Bootstrap -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
 
 </body>
 
