--- a/lyrically.html
+++ b/lyrically.html
@@ -21,12 +21,12 @@
 
     <!-- link bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
-    integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
-  <script src="https://kit.fontawesome.com/65a39d250b.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
+        integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
+    <script src="https://kit.fontawesome.com/65a39d250b.js" crossorigin="anonymous"></script>
 
     <!-- Link Style Sheet -->
     <link rel="stylesheet" href="css/lyrically.css">
@@ -61,29 +61,32 @@
     <!-- Intro -->
 
     <section class="intro-section">
-        <h2>Overview</h2>
-        <p>Lyrically was my frontend development capstone project at Nashville Software School. The objective of
-            this
-            was to build a functioning app in React.js that allows the user to create, read and destroy. I also
-            took
-            the
-            initiative collect data and conduct user interviews to create a case study before developing this
-            application. Below, I have detailed my design process and included video a walkthrough of my
-            developed
-            application.</p>
+        <div class="overview">
+            <h2>Overview</h2>
+            <p>Lyrically was my frontend development capstone project at Nashville Software School. The objective of
+                this
+                was to build a functioning app in React.js that allows the user to create, read and destroy. I also
+                took
+                the
+                initiative collect data and conduct user interviews to create a case study before developing this
+                application. Below, I have detailed my design process and included video a walkthrough of my
+                developed
+                application.</p>
+            <br>
 
-        <h2>What need does this fill?</h2>
-        <p>When songwriters gig, they are often required to add cover songs (other people’s songs) to their setlists
-            of
-            original material in order to get paid. Currently, there are apps to create setlists for cover songs and
-            there
-            are apps to create setlists for original songs, but there are no apps that allow the user to combine
-            both
-            covers
-            and original material. So musicians often have to switch between multiple apps while gigging and
-            rehearsing.
-            I
-            designed Lyrically as a solution to this problem.</p>
+            <h2>What need does this fill?</h2>
+            <p>When songwriters gig, they are often required to add cover songs (other people’s songs) to their setlists
+                of
+                original material in order to get paid. Currently, there are apps to create setlists for cover songs and
+                there
+                are apps to create setlists for original songs, but there are no apps that allow the user to combine
+                both
+                covers
+                and original material. So musicians often have to switch between multiple apps while gigging and
+                rehearsing.
+                I
+                designed Lyrically as a solution to this problem.</p>
+        </div>
     </section>
     <section class="intro2-section">
         <div class="intro-container">
@@ -119,12 +122,13 @@
             <h3 class="process-header"> &#60 Discover Phase &#62 </h3>
         </div>
 
-
+        <div class="problem">
         <h2>Problem Statement</h2>
         <p>To provide a way for musicians to store their music for both covers and original songs in one place,
             while
             being
             able to easily arrange and change setlists. </p>
+        </div>
 
         <br>
 
@@ -354,16 +358,16 @@
     <script src="js/index.js"></script>
 
 
-  <!-- JS Link for Bootstrap -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
+    <!-- JS Link for Bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 
 </body>
 
