--- a/rhino-splits.html
+++ b/rhino-splits.html
@@ -21,8 +21,8 @@
     href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
     rel="stylesheet">
 
-<!-- Style sheet -->
-<link href="css/rhino-splits.css" rel="stylesheet">
+  <!-- Style sheet -->
+  <link href="css/rhino-splits.css" rel="stylesheet">
 
 
 </head>
@@ -201,16 +201,18 @@
 
   <!--Interviews-->
   <section class="interview-section">
-    <p>
-      The user interviews may be my favorite part of the research process! I started my interviews with a friendly
-      greeting, to make sure the interviewee is at ease and a disclaimer to let them know they are being recorded.
-      Recording the sessions allows me to be more present and engaged in the conversation with user, rather than
-      having break eye contact to write in a notepad.
-      I started all my interviews with asking about the user's background. I slowly let the conversation turn to
-      technology and their past and current experiences with digital wallets. My main goal when it comes to user
-      interviews is to pull stories and experiences out of the user by making them feel comfortable, as if we are just
-      having a casual conversation.
-    </p>
+    <div class="interviews">
+      <p>
+        The user interviews may be my favorite part of the research process! I started my interviews with a friendly
+        greeting, to make sure the interviewee is at ease and a disclaimer to let them know they are being recorded.
+        Recording the sessions allows me to be more present and engaged in the conversation with user, rather than
+        having break eye contact to write in a notepad.
+        I started all my interviews with asking about the user's background. I slowly let the conversation turn to
+        technology and their past and current experiences with digital wallets. My main goal when it comes to user
+        interviews is to pull stories and experiences out of the user by making them feel comfortable, as if we are just
+        having a casual conversation.
+      </p>
+    </div>
 
     <!--Interview Gif-->
     <img class="design-gif" src="images/Interview.gif" alt="graphic designer on computer">
