--- a/honey-rae.html
+++ b/honey-rae.html
@@ -48,6 +48,7 @@
 
     <!-- Overview -->
     <section>
+        <div class="overview">
         <h2>Overview</h2>
         <p>This application was built using React for multiple users. The user can log in as a customer or an employee.
             The
@@ -60,6 +61,7 @@
             customer-user can also view open tickets (service requests that have not been worked on) and view just their
             service request tickets. Dynamic coding. ERD is attached below.
         </p>
+    </div>
     </section>
 
     <!-- Video -->
