manooth btn fixed

--- a/manooth.html
+++ b/manooth.html
@@ -115,7 +115,9 @@
         <h2>Video Walkthrough</h2>
         <video controls class="manoothVidWeb" src="img/manooth/ManoothVidWeb.mp4"></video>
         <div class="btn-container">
-            <button class="btn">Interact</button>
+            <a href="https://xd.adobe.com/view/69a945a3-a562-4161-9342-9b6e4390a315-3cfa/?fullscreen">
+                <button class="btn"> <b>View Prototype</b></button>
+            </a>
         </div>
 
         <!-- App Version -->
@@ -131,7 +133,7 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-            
+
 
             </ol>
             <div class="carousel-inner">
