--- a/rhino-splits.html
+++ b/rhino-splits.html
@@ -72,8 +72,9 @@
         </p>
       </h2>
       <div class="btn-section">
-        <a href="https://www.figma.com/file/ZMuA8hybpuXbB9AWSoEygZ/Rhino-Splits-2?node-id=0%3A1"><button class="btn">
-            <b> View Prototype</b> </button></a>
+        <a href="https://www.figma.com/proto/ZMuA8hybpuXbB9AWSoEygZ/Rhino-Splits-2?node-id=50%3A1017&scaling=min-zoom&page-id=0%3A1&starting-point-node-id=50%3A1017&show-proto-sidebar=1">
+          <button class="btn"> <b>View Prototype</b> </button>
+        </a>
       </div>
     </div>
   </section>
