--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <img src="img/rhino-splits.png" alt="" class="portfolio__img">
                     <div class="item-text">
                         <h3>Rhino Splits</h3>
-                        <p class="project-description">UX / UI Design</p>
+                        <p class="project-description">UX Research</p>
                     </div>
                 </a>
 
@@ -148,7 +148,7 @@
                     <img src="img/manooth-furniture.jpg" alt="" class="portfolio__img">
                     <div class="item-text">
                         <h3>Manooth Furniture</h3>
-                        <p class="project-description">UX / UI Design</p>
+                        <p class="project-description">UI Design</p>
                     </div>
                 </a>
 
