titles added to mobile

--- a/index.html
+++ b/index.html
@@ -162,32 +162,14 @@
                 </div>
             </a>
 
-            <!-- Portfolio item 07 -->
-            <!-- <a href="#" class="portfolio__item">
-                    <img src="img/portfolio-07.jpg" alt="" class="portfolio__img">
-                </a>
-                
-                 Portfolio item 08 -->
-            <!-- <a href="#" class="portfolio__item">
-                    <img src="img/portfolio-08.jpg" alt="" class="portfolio__img">
-                </a> -->
-
-            <!-- Portfolio item 09 -->
-            <!-- <a href="#" class="portfolio__item">
-                    <img src="img/portfolio-09.jpg" alt="" class="portfolio__img">
-                </a> -->
-
-            <!-- Portfolio item 0 0-->
-            <!-- <a href="#" class="portfolio__item">
-                    <img src="img/portfolio-10.jpg" alt="" class="portfolio__img">
-                </a> -->
+    
         </div>
     </section>
 
 
     <!-- Footer -->
     <footer class="footer">
-        <!-- replace with your own email address -->
+        <!-- email address -->
         <a href="mailto:tiffani.j.burk@gmail.com" class="footer__link">tiffani.j.burk@gmail.com</a>
         <ul class="social-list">
             <li class="social-list__item">
