--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                     <div class="item-text">
                         <h3>Lyrically</h3>
                         <p class="project-description">UX / UI / Front-End</p>
+                        <p class="viewBtn">View</p>
                     </div>
                 </a>
 
@@ -118,6 +119,7 @@
                     <div class="item-text">
                         <h3>Rhino Splits</h3>
                         <p class="project-description">UX Research</p>
+                        <p class="viewBtn">View</p>
                     </div>
                 </a>
 
@@ -127,8 +129,9 @@
                 <a href="honey-rae.html" class="portfolio__item">
                     <img src="img/honey-rae.png" alt="" class="portfolio__img">
                     <div class="item-text">
-                        <h3>Honey Rae Repairs</h3>
+                        <h3 class="proj-name">Honey Rae Repairs</h3>
                         <p class="project-description">Front-End Dev</p>
+                        <p class="viewBtn">View</p>
                     </div>
                 </a>
 
@@ -139,6 +142,7 @@
                     <div class="item-text">
                         <h3>Cake My Day</h3>
                         <p class="project-description">UX / UI Design</p>
+                        <p class="viewBtn">View</p>
                     </div>
                 </a>
   
@@ -149,6 +153,7 @@
                     <div class="item-text">
                         <h3>Manooth Furniture</h3>
                         <p class="project-description">UI Design</p>
+                        <p class="viewBtn">View</p>
                     </div>
                 </a>
 
@@ -158,6 +163,7 @@
                     <img src="img/UI.png" alt="" class="portfolio__img">
                     <div class="item-text">
                         <p class="project-description">UI & Visual Elements</p>
+                        <p class="viewBtn">View</p>
                     </div>
                 </div>
             </a>
